<resources>
    <string name="app_name">Athenaeum</string>
    <string name="location">Location</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="request">Request</string>
    <string name="isbn">ISBN</string>
    <string name="author">Author</string>
    <string name="by">by:</string>
    <string name="title">Title</string>
    <string name="delete_book">Delete Book</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="status">Status</string>
    <string name="update_information">Update Information</string>
    <string name="book_image">Book Image</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="owned_books">Owned Books</string>
    <string name="requested_books">Requested Books</string>
    <string name="borrowed_books">Borrowed Books</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="scan_book">Scan Book</string>
    <string name="logout">Logout</string>
    <string name="owner">Owner</string>
    <string name="borrower">Borrower</string>
    <string name="choose_location">Choose Location</string>
    <string name="change_book_status">Change Book Status</string>
    <string name="keyword">Keyword</string>
    <string name="search">Search</string>
    <string name="search_by_keyword">Search by Keyword</string>
    <string name="add_book">Add Book</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="athenaeum">Athenaeum</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="scan_isbn_from_barcode">Scan ISBN from Barcode</string>
    <string name="textview">TextView</string>
    <string name="contact_info">Contact Info:</string>
    <string name="edit_profile_info">Edit Profile Info</string>
    <string name="phone_number">Phone Number</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="description">Description</string>
</resources>