<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/menu_notifications"
            android:title="@string/notifications"
            app:actionLayout="@layout/menu_counter" />
        <item
            android:id="@+id/menu_owned"
            android:title="@string/owned_books" />
        <item
            android:id="@+id/menu_requested"
            android:title="@string/requested_books" />
        <item
            android:id="@+id/menu_borrowed"
            android:title="@string/borrowed_books" />
        <item
            android:id="@+id/menu_accepted"
            android:title="@string/accepted_requests" />
        <item
            android:id="@+id/menu_scan"
            android:title="@string/scan_book" />
        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout" />

    </group>

</menu>